--- a/templates/admin.html
+++ b/templates/admin.html
@@ -47,7 +47,7 @@
         <div class="container mx-auto px-4 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-4">
-                    <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?w=100&h=100&fit=crop&crop=center" 
+                    <img src="https://www.pythonanywhere.com/user/battbot/files/home/battbot/WhatsApp%20Image%202025-08-04%20at%2003.22.59_8508aa3a.jpg" 
                          alt="Suzu Kafé Logo" 
                          class="w-12 h-12 rounded-full shadow-lg border-2 border-white object-cover"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
