--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/html5-qrcode@2.3.8/minified/html5-qrcode.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="/static/js/image-optimizer.js" as="script">
+    <link rel="preload" href="/static/js/advanced-camera.js" as="script">
     <style>
         body { font-family: 'Inter', sans-serif; }
         .gradient-bg {
@@ -241,6 +243,8 @@
         </div>
     </footer>
 
+    <script src="/static/js/image-optimizer.js"></script>
+    <script src="/static/js/advanced-camera.js"></script>
     <script src="/static/js/admin.js"></script>
 </body>
 </html>
