--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preload" href="/static/js/image-optimizer.js" as="script">
     <style>
         body { font-family: 'Inter', sans-serif; }
         
@@ -277,6 +278,7 @@
         </div>
     </footer>
 
+    <script src="/static/js/image-optimizer.js"></script>
     <script src="/static/js/main.js"></script>
 </body>
 </html>
