--- a/templates/admin.html
+++ b/templates/admin.html
@@ -49,12 +49,9 @@
         <div class="container mx-auto px-4 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-4">
-                    <img src="https://www.pythonanywhere.com/user/battbot/files/home/battbot/WhatsApp%20Image%202025-08-04%20at%2003.22.59_8508aa3a.jpg" 
+<img src="https://www.pythonanywhere.com/user/battbot/files/home/battbot/WhatsApp%20Image%202025-08-04%20at%2003.22.59_8508aa3a.jpg" 
                          alt="Suzu Kafé Logo" 
-                         class="w-12 h-12 rounded-full shadow-lg border-2 border-white object-cover"
-                         crossorigin="anonymous"
-                         referrerpolicy="no-referrer"
-                         onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
+                         class="w-12 h-12 rounded-full shadow-lg border-2 border-white object-cover" />
                     <div class="w-12 h-12 bg-gradient-to-br from-amber-600 to-amber-800 rounded-full flex items-center justify-center text-white font-bold text-lg shadow-lg border-2 border-amber-200 hidden">
                         A
                     </div>
@@ -304,7 +301,6 @@
             return svg;
         }
     </script>
-    <script src="/static/js/image-optimizer.js"></script>
     <script src="/static/js/advanced-camera.js"></script>
     <script src="/static/js/admin.js"></script>
 </body>
